Make sure algebra input is not hidden by stylebar
git-svn-id: http://dev.geogebra.org/svn/trunk/geogebra@37671 23ce0884-8a58-47d3-bc5c-ddf1cd5b9f9e

--- a/web/src/geogebra/resources/css/web-styles.css
+++ b/web/src/geogebra/resources/css/web-styles.css
@@ -3280,6 +3280,9 @@ body.application[dir=rtl] #View_2 {
 	background-color: #FFFFFF;
 }
 
+.ggbInputFirst{
+	margin-top:50px;
+}
 .tb_img {
 	width: 32px;
 	height: 32px;
